test/inputs/fail_record_access_T1.fw
#option "fail"

let f (x : { a : int }) = x.b
